# snoopsnitch

./: .gitignore  .gitmodules  Makefile  Paired_Comparison.xlsx  README  README.md  SecurityMetrics.tex  analysis.sql  analysis_ci.sql  analysis_si.sql  arydshln.sty  bibliography.bib  config.sql  srlabs.tex
contrib/libosmo-asn1-rrc/: .gitignore  Makefile.am  Makefile.in  configure  configure.ac  libosmo-asn1-rrc.pc.in
contrib/libosmo-asn1-rrc/asn/: Class-definitions.asn  Constant-definitions.asn  InformationElements.asn  Internode-definitions.asn  PDU-definitions.asn
contrib/libosmo-asn1-rrc/autom4te.cache/: output.0  output.2  requests  traces.0  traces.1  traces.2
contrib/libosmo-asn1-rrc/include/: AC-To-ASC-Mapping.h  AC-To-ASC-MappingTable.h  ACK-NACK-repetitionFactor.h  AICH-Info-Compressed.h  AICH-Info.h  AICH-PowerOffset.h  AICH-TransmissionTiming.h  ALM-ECEFsbasAlmanacSet.h  ALM-GlonassAlmanacSet.h  ALM-MidiAlmanacSet.h  ALM-NAVKeplerianSet.h  ALM-ReducedKeplerianSet.h  ALM-keplerianParameters.h  ANSI-41-GlobalServiceRedirectInfo.h  ANSI-41-NAS-Parameter.h  ANSI-41-PrivateNeighbourListInfo.h  ANSI-41-RAND-Information.h  ANSI-41-UserZoneID-Information.h  AP-AICH-ChannelisationCode.h  AP-PreambleScramblingCode.h  AP-Signature-VCAM.h  AP-Signature.h  AP-Subchannel.h  ASCSetting-FDD.h  ASCSetting-TDD-LCR-r4.h  ASCSetting-TDD-r7.h  ASCSetting-TDD.h  AccessClassBarred.h  AccessClassBarredList.h  AccessServiceClass-FDD.h  AccessServiceClass-TDD-LCR-r4.h  AccessServiceClass-TDD-r7.h  AccessServiceClass-TDD.h  AccessStratumReleaseIndicator.h  AcquisitionSatInfo-r10.h  (+3897 more)
(+4554 files in other folders)
